<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.BlocksActivity">
    <item
        android:id="@+id/menu_user_name"
        android:title=" "
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings_icon"
        android:title=" "
        android:icon="@drawable/ic_reorder_white"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/menu_aboutus"
                android:title="@string/menu_aboutus"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_updates"
                android:title="@string/menu_updates"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_adhoc"
                android:title="@string/menu_adhoc_user"
                app:showAsAction="ifRoom" />
            <!--<item
                android:id="@+id/menu_timebound"
                android:title="@string/menu_timebound_user"
                app:showAsAction="ifRoom" />-->
            <item
                android:id="@+id/menu_settings"
                android:title="@string/menu_settings"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_printer"
                android:title="@string/menu_printer"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_logout"
                android:title="@string/menu_logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>